# openclaw-config

./: .env.sample  .gitignore  AGENTS.md  LOBSTERS.md  Makefile  README.md  SOUL.md  cron_jobs.json  openclaw.json
docs/: UPGRADE_4.2_OLLAMA_FIX.md  index.md  lobster-workflow.puml
workspaces/animal-expert/: SOUL.md
workspaces/director-lobster/: AGENTS.md  IDENTITY.md  SOUL.md
workspaces/gaming-generalist/: IDENTITY.md  SOUL.md  TOOLS.md  USER.md
workspaces/intern-lobster/: IDENTITY.md  SOUL.md
workspaces/maple-expert/: SOUL.md  TOOLS.md
workspaces/pua-expert/: AGENTS.md  IDENTITY.md  SOUL.md
workspaces/senior-lobster/: IDENTITY.md  SOUL.md
workspaces/sports-expert/: SOUL.md
workspaces/tech-expert/: AGENTS.md  ARCHITECTURE.md  HEARTBEAT.md  IDENTITY.md  LOBSTERS.md  README.md  SOUL.md  TOOLS.md  advanced_decode.py  brute_appstore.py  crack_v2.py  decode.py  decode_detailed.py  full_throttle_decoder.py  make_quote.py  quantum_lobster_decoder.py  timer.py  ultimate_decoder.py  version.json
workspaces/tech-expert/docs/: lobster-workflow-simple.puml
workspaces/tech-expert/fastapi-app/: Dockerfile  pyproject.toml
workspaces/tech-expert/skills/gh-cli/: SKILL.md
workspaces/tech-expert/src/app/: main.py
workspaces/tech-expert/templates/: index.html
workspaces/writer-assistant/: IDENTITY.md  SOUL.md  USER.md
