[project]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application with uv"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "uvicorn>=0.34.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
compile-bytecode = true
dev-dependencies = [
    "pytest>=8.0.0",
]
